# HU-Vision-Team-IZN

./: README.md
implementatieplannen/template/: ~$plementatieplan template.docx
implementatieplannen/working/: Scaling.md
meetrapporten/template/: Meetrapport template_updated.docx
meetrapporten/working/: Meetrapport Grayscaling.docx  ~$etrapport Grayscaling.docx
meetrapporten/working/Integratie/: main.tex  titlepage.tex
meetrapporten/working/Kwaliteit/: main.tex  titlepage.tex
meetrapporten/working/Snelheid/: main.tex  titlepage.tex
source/: .gitignore
source/ExternalDLL/ExternalDLL/: CMakeLists.txt  ExternalDLL.vcxproj  ExternalDLL.vcxproj.filters  ExternalDLL2015.vcxproj  ImageIO.cpp  ImageIO.h  IntensityImageStudent.cpp  IntensityImageStudent.h  Main.cpp  RGBImageStudent.cpp  RGBImageStudent.h  StudentKernal.cpp  StudentKernal.h  StudentLocalization.cpp  StudentLocalization.h  StudentPreProcessing.cpp
source/FaceRecognitionGUI/FaceRecognitionGUI/: CMakeLists.txt
